--- a/GraphicsAndGears/Views/Shared/_Layout.cshtml
+++ b/GraphicsAndGears/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Graphics", "Home", "Graphics")</li>
+                    <li>@Html.ActionLink("Gears", "Home", "Gears")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
