--- a/GraphicsAndGears/Views/Home/Index.cshtml
+++ b/GraphicsAndGears/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
 
 <div class="row">
     <div class="col-md-6" id="homenav" align="center">
-        <h1>Graphics</h1>
-        <img src="~/Content/Images/gearsLogo.jpg"/>
+        <h1>Gears</h1>
+        <a href='@Url.Action("Home","Gears")'><img src="~/Content/Images/gearsLogo.jpg" /></a>
     </div>
     <div class="col-md-6" align="center">
-        <h1>Gears</h1>
-        <img src="~/Content/Images/graphicsLogo.jpg"/>
-    </div>
+        <h1>Graphics</h1>
+        <a href='@Url.Action("Home","Graphics")'><img src="~/Content/Images/graphicsLogo.jpg"</a>
+</div>
 </div>
