--- a/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
+++ b/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
@@ -5,47 +5,47 @@
 }
 
 <h2>Parts Request Form</h2>
-<form>
+<form method="post" action="/Gears/SendEmail" enctype="application/x-www-form-urlencoded">
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">Name</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" name ="nameField" type="text">
     </div>
 </div>
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">Company</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" type="text" name ="companyField">
     </div>
 </div>
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">Phone</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" type="text" name ="phoneField">
     </div>
 </div>
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">E-Mail</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" type="text" name ="emailField">
     </div>
 </div>
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">Year</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" type="text" name ="yearField">
     </div>
 </div>
 <div class="form-group row">
     <label for="example-text-input" class="col-2 col-form-label">Make</label>
     <div class="col-10">
-        <input class="form-control" type="text" id="example-text-input">
+        <input class="form-control" type="text" name ="makeField">
     </div>
 </div>
     <div class="form-group row">
         <label for="example-text-input" class="col-2 col-form-label">Model</label>
         <div class="col-10">
-            <input class="form-control" type="text" id="example-text-input">
+            <input class="form-control" type="text" name ="modelField">
         </div>
     </div>
     <button type="submit" class="btn-primary">Submit</button>
