--- a/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
+++ b/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
@@ -5,43 +5,44 @@
 }
 
 <h2>Parts Request Form</h2>
+<body>
 <form method="post" action="/Gears/SendEmail" enctype="application/x-www-form-urlencoded">
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">Name</label>
-    <div class="col-10">
-        <input class="form-control" name ="nameField" type="text">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">Name</label>
+        <div class="col-10">
+            <input class="form-control" name ="nameField" type="text">
+        </div>
     </div>
-</div>
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">Company</label>
-    <div class="col-10">
-        <input class="form-control" type="text" name ="companyField">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">Company</label>
+        <div class="col-10">
+            <input class="form-control" type="text" name ="companyField">
+        </div>
     </div>
-</div>
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">Phone</label>
-    <div class="col-10">
-        <input class="form-control" type="text" name ="phoneField">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">Phone</label>
+        <div class="col-10">
+            <input class="form-control" type="text" name ="phoneField">
+        </div>
     </div>
-</div>
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">E-Mail</label>
-    <div class="col-10">
-        <input class="form-control" type="text" name ="emailField">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">E-Mail</label>
+        <div class="col-10">
+            <input class="form-control" type="text" name ="emailField">
+        </div>
     </div>
-</div>
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">Year</label>
-    <div class="col-10">
-        <input class="form-control" type="text" name ="yearField">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">Year</label>
+        <div class="col-10">
+            <select class="form-control" type="text" name ="yearField" data-bind="value: modelYear">
+        </div>
     </div>
-</div>
-<div class="form-group row">
-    <label for="example-text-input" class="col-2 col-form-label">Make</label>
-    <div class="col-10">
-        <input class="form-control" type="text" name ="makeField">
+    <div class="form-group row">
+        <label for="example-text-input" class="col-2 col-form-label">Make</label>
+        <div class="col-10">
+            <input class="form-control" type="text" name ="makeField">
+        </div>
     </div>
-</div>
     <div class="form-group row">
         <label for="example-text-input" class="col-2 col-form-label">Model</label>
         <div class="col-10">
@@ -49,4 +50,24 @@
         </div>
     </div>
     <button type="submit" class="btn-primary">Submit</button>
-    </form>
+</form>
+
+<div class="form-group">
+    <label class="col-12 control-label labelfont">Certification:</label>
+    <div class="col-12">
+        <select class="form-control" id="certification" name="certification" data-bind="value: certification, options: certificationArray, optionsText: 'Certification', optionsValue: 'CertificationID', optionsCaption: 'Select a Certification'"></select>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-12 control-label labelfont">Specialization:</label>
+    <div class="col-12">
+        <select class="form-control" id="specialization" name="specialization" data-bind="value: specialization, options: specializationArray,optionsText:'Specialization',optionsValue:'SpecializationId', optionsCaption: 'Select a Specialization'"></select>
+    </div>
+</div>
+</body>
+<script>
+    var myViewModel = {
+        modelYear: ko.observable('1960')
+    };
+   
+</script>
