--- a/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
+++ b/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "PartsRequest";
+    ViewBag.Title = "Parts Request Form";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -34,13 +34,13 @@
     <div class="form-group row">
         <label for="example-text-input" class="col-2 col-form-label">Year</label>
         <div class="col-10">
-            <select class="form-control" type="text" name ="yearField" data-bind="value: modelYear">
+            <select class="form-control" type="text" data-bind="options: availableYear"></select>
         </div>
     </div>
     <div class="form-group row">
         <label for="example-text-input" class="col-2 col-form-label">Make</label>
         <div class="col-10">
-            <input class="form-control" type="text" name ="makeField">
+            <select class="form-control" type="text" name ="makeField" data-bind="options: availableMake"></select>
         </div>
     </div>
     <div class="form-group row">
@@ -51,23 +51,18 @@
     </div>
     <button type="submit" class="btn-primary">Submit</button>
 </form>
-
-<div class="form-group">
-    <label class="col-12 control-label labelfont">Certification:</label>
-    <div class="col-12">
-        <select class="form-control" id="certification" name="certification" data-bind="value: certification, options: certificationArray, optionsText: 'Certification', optionsValue: 'CertificationID', optionsCaption: 'Select a Certification'"></select>
-    </div>
-</div>
-<div class="form-group">
-    <label class="col-12 control-label labelfont">Specialization:</label>
-    <div class="col-12">
-        <select class="form-control" id="specialization" name="specialization" data-bind="value: specialization, options: specializationArray,optionsText:'Specialization',optionsValue:'SpecializationId', optionsCaption: 'Select a Specialization'"></select>
-    </div>
-</div>
 </body>
-<script>
-    var myViewModel = {
-        modelYear: ko.observable('1960')
-    };
-   
+<script type="text/javascript">
+    $(function() {
+        var i = 0;
+        var years = [];
+        for (i = 1960; i<= 2017; i++) {
+            years.push(i);
+        }
+        var yearViewModel = {
+            availableMake: ko.observableArray(['Ford', 'Toyota', 'Honda', 'Mitsubishi', 'GM']),
+            availableYear: ko.observableArray(years)
+        };
+        ko.applyBindings(yearViewModel);
+    });
 </script>
