need to add validation for parts request

--- a/GraphicsAndGears/Views/Gears/Home.cshtml
+++ b/GraphicsAndGears/Views/Gears/Home.cshtml
@@ -5,5 +5,13 @@
 }
 
 <h2>Gears</h2>
-<a href='@Url.Action("PartsRequest","Gears")'>Parts Request</a>
-
+<div class="jumbotron">
+    <div class="col-md-6">
+        <img src="~/Content/Images/Fuller-Transmissions.jpg" height="100px" width="100px"/>
+    </div>
+</div>
+<div class="col-md-12">
+<p class="bg-primary text-white">We offer the very best in quality truck parts</p>
+<p class="bg-primary text-white">Choose from the following list</p>
+<p class="bg-primary text-white">If you don't see what you want, click <a href='@Url.Action("PartsRequest","Gears")' font-size="30px">here</a> to submit a part request</p>
+</div>
