--- a/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
+++ b/GraphicsAndGears/Views/Gears/PartsRequest.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group row">
         <label for="example-text-input" class="col-2 col-form-label">Phone</label>
         <div class="col-10">
-            <input class="form-control" type="text" name ="phoneField">
+            <input class="form-control" type="text" name ="phoneField" data-bind="ValidationMessage">
         </div>
     </div>
     <div class="form-group row">
